Fix margin problems on mobile devices.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -159,7 +159,7 @@ pre {
 .wrapper {
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-  margin-right: 30%;
+  margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
